# WeLT

./: .gitignore  BENCHMARK.md  Dockerfile  OPTIMIZATION.md  README.md  benchmark_generation.py  environment.yml  pyproject.toml  working_environment.txt
.github/actions/setup-environment/: action.yaml
.github/workflows/: lint.yaml  publish-docker.yaml  test.yaml
docs/: PACKING.md
examples/: benchmark_image_encoder.py  benchmark_processor.py  demo_packing_efficiency.py
tests/: test_attention.py  test_metrics.py  test_model.py  test_model_generation.py  test_model_overfitting.py  test_packing.py  test_packing_correctness.py  test_prepare_data.py  test_processor.py  test_train.py  test_trainer.py  test_verify_data.py
training/: README.md  args_data.py  args_eval.py  args_trainer.py  eval.py  evaluate.py  evaluation.py  extendable_yaml.py  sample.py  train.py  trainer.py
training/experiments/bpe-pretokenizer/: welt-bpe-14m.yaml
training/experiments/chat/: README.md
training/experiments/easy-tasks/: README.md  letter-count-eval.yaml  letter-count.yaml  ocr.yaml  string-repetition.yaml
training/experiments/machine-translation/: README.md  machine-translation-en-ne.yaml  machine-translation-signed-spoken.yaml  machine-translation.yaml
welt/: attention.py  collator.py  config.py  model.py  model_utils.py  processor.py  trainer.py
welt/vision/: README.md  batch_image_encoder.py  masked_vit_patcher.py  navit.py
welt_training/: README.md  args_data.py  args_model.py  args_trainer.py  data_utils.py  demo.py  demo_clm.py  extendable_yaml.py  flops_callback.py  metrics.py  prepare_data.py  sample.py  streaming.py  train.py  trainer.py  verify_data.py
welt_training/experiments/bpe-pretokenizer/: README.md
welt_training/experiments/chat/: README.md  single-query.yaml
welt_training/experiments/easy-tasks/: README.md  benchmark-run.yaml  letter-count.yaml  string-repetition.yaml
welt_training/experiments/machine-translation/: README.md  machine-translation-signed-spoken.yaml  machine-translation.yaml  run_clm.py
welt_training/experiments/pretrain/: bert-tiny.json  pile-pretrain-30m-no-image.yaml  test-run.yaml
